# universal-soft-sensor

./: .gitignore  CLAUDE.md  GO_TO_MARKET.md  PLAN_RENAME.md  README.md  ROADMAP.md  SECURITY_AUDIT.md  ai4i-2020-predictive-maintenance.ipynb  dashboard.py  flot_hourly.json  nasa-predictive-maintenance-rul.ipynb  predict_universal.py  pyproject.toml  requirements.txt  run_flotation_benchmark.py  run_flotation_horizons.py  run_flotation_hourly.py  run_geomet_recovery.py  run_geomet_rigor.py  train_universal.py
.claude/: settings.local.json
config/: dataset_config.json  settings.py
core/: __init__.py  inference_engine.py  pipeline.py  preprocessor.py  report_generator.py
core/adapters/: __init__.py  csv_adapter.py  data_adapter.py  mining_csv_adapter.py  mining_data_adapter.py  universal_adapter.py
core/models/: __init__.py  gp_model.py  mining_gp_pro.py
core/validation/: __init__.py  schema.py  validator.py
paper/: paper.aux  paper.out  paper.tex  zenodo_description.txt
tests/: __init__.py  conftest.py  test_core.py  test_modeling.py  test_pipeline.py  test_security.py
tools/: diagnostico_datos.py  scan_schema.py
