[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-soft-sensor"
# [FIX] Versión sincronizada con settings.py (era 1.0.0 en pyproject pero 1.1.0 en settings)
version = "1.1.0"
description = "Pipeline ETL + Soft-Sensor universal con Gaussian Processes e incertidumbre calibrada (minería, mantenimiento predictivo, cualquier proceso con sensores)"
readme = "README.md"
# [FIX] Licencia corregida de MIT a AGPL-3.0 para coincidir con README.md y badge del repo
# ANTES: license = {text = "MIT"}  ← contradecía el README que declaraba AGPL-3.0
# AHORA: apunta al archivo LICENSE en la raíz del repo (debe existir con texto AGPL-3.0)
license = {file = "LICENSE"}
authors = [
    # [FIX] Reemplazar placeholder @example.com con email real
    {name = "Juan Galaz", email = "juan.galaz.a@usach.cl"}
]
requires-python = ">=3.10"

keywords = [
    "soft-sensor",
    "gaussian-process",
    "uncertainty",
    "predictive-maintenance",
    "etl",
    "industrial",
    "universal"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    # [FIX] Clasificador de licencia actualizado para coincidir con AGPL-3.0
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "optuna>=3.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "rich>=13.0.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
    # [FIX] Dependencias faltantes que causaban ModuleNotFoundError en deploy limpio
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
softsensor-pipeline = "core.pipeline:main"
softsensor-gp = "core.models.gp_model:main"
softsensor-scan = "tools.scan_schema:main"

[project.urls]
# [FIX] URL actualizada con el handle real de GitHub
Repository = "https://github.com/CienciaEstelar/proyecto_minero_4.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "config*", "tools*"]

[tool.setuptools.package-data]
# [FIX] Agregado *.json para incluir dataset_config.example.json en el paquete
"*" = ["*.md", "*.txt", "*.yaml", "*.yml", "*.json"]

# === Configuración de herramientas de desarrollo ===

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | data
    | results
    | models
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "data/",
    "results/",
    "models/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
